# qoobot

./: .gitignore  CMakeLists.txt  LICENSE  MJDATA.TXT  README.md  README_EN.md  _test_import.py  mjmodel.xml  package.json  test_brute_force_stand.py  test_contact_stability.py  test_correct_height.py  test_equilibrium_state.py  test_find_base_height.py  test_find_stand.py  test_foot_contact.py  test_foot_geometry.py  test_gravity_comp.py  test_jacobian_direction.py  test_joint_tracking.py  test_measure_stand_height.py  test_measure_stand_height2.py  test_ol_ctrl3.py  test_ol_ctrl4.py  test_ol_ctrl5.py  test_openloong_ctrl.py  test_openloong_ctrl2.py  test_simple_stand.py  test_wbc_debug.py  test_wbc_debug2.py  test_wbc_height_integral.py  test_wbc_stand_final.py  test_wbc_stand_long.py  test_wbc_torque_breakdown.py  test_wbc_torque_breakdown2.py
brain_core/: CMakeLists.txt
brain_core/config/: topics.yaml
brain_core/config/safety/: collision_zones.yaml
brain_core/include/brain_core/: core_types.h
brain_core/launch/: brain_core.launch.py
brain_core/src/: main.cpp
brain_core/src/behavior_engine/: bt_loader.cpp
brain_core/src/event_bus/: event_publisher.cpp
brain_core/src/grpc_client/: brain_ai_client.cpp
brain_core/src/grpc_server/: control_service_impl.cpp
brain_core/src/hal_interface/: actuator_writer.cpp  sensor_reader.cpp
brain_core/src/motion_planner/: ik_solver.cpp  trajectory_follower.cpp  trajectory_optimizer.cpp
brain_core/src/ros2_bridge/: action_adapter.cpp  node_manager.cpp  topic_adapter.cpp
brain_core/src/safety_monitor/: joint_limiter.cpp  watchdog.cpp  workspace_validator.cpp
brain_core/src/utils/: coordinate_transform.cpp  pose_utils.cpp  thread_pool.cpp
brain_core/test/behavior_engine/: test_tree_executor.cpp
brain_core/test/ros2_bridge/: test_node_manager.cpp
brain_core/test/safety_monitor/: test_collision_checker.cpp
qooauth/qooauth-sdk-cpp/: CMakeLists.txt
qooauth/qooauth-sdk-cpp/examples/: device_activate.c
qooauth/qooauth-sdk-cpp/src/: qooauth_activation_client.c  qooauth_device_auth.c  qooauth_error.c  qooauth_internal_utils.c  qooauth_tls.c
qooauth/qooauth-sdk-cpp/tests/: test_cert_manager.c
qoobody/ros2_pkgs/qoobody_ros_bridge/: CMakeLists.txt  package.xml
qoobody/ros2_pkgs/qoobot_description/: package.xml
qoobot-desktop/qooremote/: README.md  pyproject.toml
qoobot-desktop/qooremote/console/: __init__.py  app.py  main.py
qoobot-desktop/qooremote/docs/: 01功能清单完成进度.md  02需求分析.md  03产品设计.md  04应用架构设计.md  05交互设计.md  06数据设计.md  07项目目录结构.md  08架构设计.md  09技术架构设计.md  10API设计文档.md  11测试设计文档.md  12安全架构设计.md  13部署运维架构设计.md  14开发教程.md  15质量保障设计文档.md
qoobot-os/: CMakeLists.txt  README.md
qoobot-os/ai-engine/: CMakeLists.txt  LICENSE  README.md
qoobot-os/brain/: .clang-format  .clang-tidy  CHANGELOG.md  README.md  README_zh.md  docker-compose.ci.yml  package.json  pyproject.toml
qoobot-os/build-ai-engine/: CMakeCache.txt  DartConfiguration.tcl  Makefile  compile_commands.json
qoobot-os/docs/: 01功能清单完成进度.md  02架构设计.md  03交互设计.md  04数据设计.md  05项目目录结构.md  06需求分析.md  07产品设计.md  08应用架构设计.md  09技术架构设计.md  10API设计文档.md  11安全架构设计.md  12部署运维架构设计.md  13质量保障设计文档.md
qoobot-os/edge/: CMakeLists.txt  QOOEDGE_PLANNING.md  README.md
qoobot-os/hal/: .gitignore  CMakeLists.txt  Dockerfile
qoobot-os/services/: README.md  pyproject.toml
qoobrain/: .eslintrc.cjs  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  README_zh.md  RELEASE_--dry-run.md  docker-compose.yml  package-lock.json  pyproject.toml
qoobrain/00_docs/: 01_头脑风暴文档.md  02_系统功能设计.md  03_系统架构设计.md  04_系统数据设计.md  05_系统交互设计.md  06_开发进度文档.md  07_技术选型决策记录.md  09_开发环境搭建指南.md  10_风险评估与缓解计划.md  11_CI&CD流水线设计.md  12_Phase1回顾与Phase2路线.md
qoobrain/benchmark_results/: bench_20260624.json  benchmark_20251115_120153.json  benchmark_20251115_120153.md  benchmark_20260624_120138.json  benchmark_20260624_120138.md  benchmark_20260624_120220.md  control_benchmark_20260320.md  perception_benchmark_20260315.md  planning_benchmark_20260315.md
qoobrain/brain_ai/: requirements-dev.txt
qoobrain/brain_deploy/: docker-compose.prod.yml
qoobrain/brain_docs/: mkdocs.yml
qoobrain/brain_proto/: buf.yaml
qoobrain/brain_sdk/: MANIFEST.in  README.md  pyproject.toml
qoobrain/brain_viz/: tsconfig.tsbuildinfo
qoobrain/scripts/: phase1_review.py  release.py  scan_completion.py  verify_brain_core_build.py
qoobrain/tests/: benchmark.py  simulation_demo.py  test_domain_and_knowledge.py  test_perception.py  test_planner.py
qoocode/: README.md  pyproject.toml
qoocode/docs/: 01功能清单完成进度.md  02架构设计.md  03开发路线图.md  04技术选型.md  05快速入门.md  06项目结构.md
qoocode/qoocode/: __init__.py
qoocode/qoocode-lsp/: pyproject.toml
qoocode/vscode-plugin/: .vscodeignore  package.json
qoocode/web-dashboard/: index.html  package.json  vite.config.ts
qoocore/: .clang-format  .gitignore  CMakeLists.txt  README.md
qoocore/cli/: cli_parser.cpp  cli_parser.h  main.cpp
qoocore/docs/: 01功能清单完成进度.md  02架构设计.md  03交互设计.md  04数据设计.md  05项目目录结构.md  06交付清单_20260627.md  07成果汇总_20260315.md  07成果汇总_20260627.md  09产品设计.md  10应用架构设计.md  11技术架构设计.md  13安全架构设计.md  15质量保障设计文档.md
qoocore/schema/: qoomodel.fbs  qoomodel_generated.h
qoocore/tests/: CMakeLists.txt
qoodev/: .editorconfig  .gitignore  README.md  pyproject.toml
qoodev/docs/: 01功能清单完成进度.md  02架构设计.md  03开发路线图.md  04技术选型.md  05快速入门.md  06项目结构.md  07交互设计.md  08数据设计.md  09需求分析.md  10产品设计.md  11应用架构设计.md  12技术架构设计.md  13API设计文档.md  14安全架构设计.md  15部署运维架构设计.md  16质量保障设计文档.md
qoodev/qoobot-sdk/: pyproject.toml
qoodev/qoodev/: __init__.py
qoodev/qoodev-lsp/: pyproject.toml
qoodev/tests/: __init__.py  test_accelerated_sim.py  test_cli_context.py  test_sim_bridge.py
qoodev/web-dashboard/: index.html  package.json
qooeco/qooeco-edge/: CMakeLists.txt  README.md
qoostore/qoostore-edge/: CMakeLists.txt  README.md
qoosvc/: CMakeLists.txt  README.md  pyproject.toml
qoosvc/config/: light_profiles.yaml  nav_config.yaml  voice_config.yaml
qoosvc/docs/: 01功能清单完成进度.md  02架构设计.md  04数据设计.md  05项目目录结构.md  07产品设计.md  09技术架构设计.md
(+3000 files in other folders)
