[project]
name = "qooremote"
version = "0.1.0"
description = "QooBot 远程机器人监控遥控控制台"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "QooBot Project" }
]
keywords = ["robotics", "teleoperation", "remote-control", "qoobot"]

dependencies = [
    "PySide6>=6.5",
    "websockets>=12.0",
    "numpy>=1.26",
    "opencv-python>=4.9",
    "pyaudio>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["console*"]
