[project]
name = "qooremote"
version = "0.1.0"
description = "QooBot 远程机器人监控遥控控制台"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "QooBot Project" }
]
keywords = ["robotics", "teleoperation", "remote-control", "qoobot"]

dependencies = [
    "PySide6>=6.5,<7.0",
    "websockets>=12.0,<14.0",
    "numpy>=1.26,<2.0",
    "opencv-python>=4.9,<5.0",
    "pyaudio>=0.2,<1.0",
    "pyqtgraph>=0.13,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "mypy>=1.8,<2.0",
    "ruff>=0.3,<1.0",
]

[project.scripts]
qooremote = "console.main:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["console*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
